# Eavesdrop

./: .dockerignore  .env.example  Dockerfile  README.md  eavesdrop.py  pyproject.toml
.github/workflows/: workflow.yaml
assets/: eavesdrop_readme.psd
core/: consts.py  hooks.py  templates.py  whisper.py
extensions/: transcribe.py
